--- a/JAVA/src/com/view/PortfolioManager.form
+++ b/JAVA/src/com/view/PortfolioManager.form
@@ -197,6 +197,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Filter"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PMPendingOrderFilterActionPerformed"/>
+              </Events>
             </Component>
             <Component class="javax.swing.JComboBox" name="FilterOptionsPMPending">
               <Properties>
@@ -430,6 +433,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Filter"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PMEODFilterActionPerformed"/>
+              </Events>
             </Component>
           </SubComponents>
         </Container>
@@ -466,12 +472,12 @@
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="0" attributes="0">
                       <EmptySpace min="-2" pref="5" max="-2" attributes="0"/>
-                      <Group type="103" groupAlignment="3" attributes="0">
-                          <Component id="PMSendOrder" alignment="3" min="-2" max="-2" attributes="0"/>
-                          <Group type="103" alignment="3" groupAlignment="3" attributes="0">
+                      <Group type="103" groupAlignment="0" attributes="0">
+                          <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                               <Component id="TraderSelectBrokerOptions" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
+                          <Component id="PMSendOrder" min="-2" max="-2" attributes="0"/>
                       </Group>
                       <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
                       <Component id="PMSendOrderScrollPane" min="-2" pref="113" max="-2" attributes="0"/>
