--- a/JAVA/src/com/view/PortfolioManager.form
+++ b/JAVA/src/com/view/PortfolioManager.form
@@ -525,32 +525,20 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="PMSendOrderTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(4);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(7);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(8);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));&#xa;TableColumn col4 = PMSendOrderTable.getColumnModel().getColumn(9);&#xa;col4.setCellEditor(new myComboBoxEditor(OrderType));&#xa;col4.setCellRenderer(new MyComboBoxRenderer(OrderType));">
-                      <Table columnCount="10" rowCount="8">
-                        <Column editable="true" title="Order ID" type="java.lang.Long"/>
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(3);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(6);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(7);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));">
+                      <Table columnCount="8" rowCount="1">
                         <Column editable="true" title="Portfolio ID" type="java.lang.Long"/>
                         <Column editable="true" title="Symbol" type="java.lang.String"/>
                         <Column editable="true" title="Quantity" type="java.lang.Integer"/>
-                        <Column editable="true" title="Action" type="java.lang.Object"/>
+                        <Column editable="true" title="Action" type="java.lang.String"/>
                         <Column editable="true" title="Stop Price" type="java.lang.Double"/>
                         <Column editable="true" title="Limit Price" type="java.lang.Double"/>
-                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
-                        <Column editable="true" title="Account Type" type="java.lang.Object"/>
-                        <Column editable="true" title="Order Type" type="java.lang.Object"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.String"/>
+                        <Column editable="true" title="Account Type" type="java.lang.String"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                       <TableColumnModel selectionModel="0">
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
-                        <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
-                          <Title/>
-                          <Editor/>
-                          <Renderer/>
-                        </Column>
                         <Column maxWidth="-1" minWidth="-1" prefWidth="-1" resizable="true">
                           <Title/>
                           <Editor/>
