--- a/JAVA/src/com/view/TradeWindow.form
+++ b/JAVA/src/com/view/TradeWindow.form
@@ -101,18 +101,18 @@
                 <Component class="javax.swing.JTable" name="TraderIncomingRequestsTable">
                   <Properties>
                     <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
-                      <Table columnCount="11" rowCount="4">
-                        <Column editable="true" title="Order ID" type="java.lang.Object"/>
-                        <Column editable="true" title="Portfolio ID" type="java.lang.Object"/>
-                        <Column editable="true" title="Symbol" type="java.lang.Object"/>
-                        <Column editable="true" title="Quantity" type="java.lang.Object"/>
-                        <Column editable="true" title="Action" type="java.lang.Object"/>
-                        <Column editable="true" title="Stop Price" type="java.lang.Object"/>
-                        <Column editable="true" title="Limit Price" type="java.lang.Object"/>
+                      <Table columnCount="11" rowCount="1">
+                        <Column editable="true" title="Order ID" type="java.lang.Long"/>
+                        <Column editable="true" title="Portfolio ID" type="java.lang.Long"/>
+                        <Column editable="true" title="Symbol" type="java.lang.String"/>
+                        <Column editable="true" title="Quantity" type="java.lang.Integer"/>
+                        <Column editable="true" title="Action" type="java.lang.String"/>
+                        <Column editable="true" title="Stop Price" type="java.lang.Double"/>
+                        <Column editable="true" title="Limit Price" type="java.lang.Double"/>
                         <Column editable="true" title="Stock Exchange" type="java.lang.String"/>
-                        <Column editable="true" title="Account Type" type="java.lang.Object"/>
-                        <Column editable="true" title="Order Type" type="java.lang.Object"/>
-                        <Column editable="true" title="Assigned By" type="java.lang.Object"/>
+                        <Column editable="true" title="Account Type" type="java.lang.String"/>
+                        <Column editable="true" title="Order Type" type="java.lang.String"/>
+                        <Column editable="true" title="Assigned By" type="java.lang.Long"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
