--- a/JAVA/src/com/view/PortfolioManager.form
+++ b/JAVA/src/com/view/PortfolioManager.form
@@ -107,6 +107,7 @@
                       <Table columnCount="12" rowCount="10">
                         <Column editable="true" title="Order ID" type="java.lang.Integer"/>
                         <Column editable="true" title="Portfolio ID" type="java.lang.String"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
                         <Column editable="true" title="Symbol" type="java.lang.String"/>
                         <Column editable="true" title="Quantity" type="java.lang.Integer"/>
                         <Column editable="true" title="Action" type="java.lang.String"/>
@@ -116,7 +117,6 @@
                         <Column editable="true" title="Order Type" type="java.lang.String"/>
                         <Column editable="true" title="Assigned To" type="java.lang.String"/>
                         <Column editable="true" title="Status" type="java.lang.String"/>
-                        <Column editable="true" title="Stock Exchange" type="java.lang.Object"/>
                       </Table>
                     </Property>
                     <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
@@ -458,7 +458,7 @@
                           <Group type="102" alignment="1" attributes="0">
                               <Component id="jLabel5" min="-2" max="-2" attributes="0"/>
                               <EmptySpace type="separate" max="-2" attributes="0"/>
-                              <Component id="TraderSelectBrokerOptions" min="-2" pref="137" max="-2" attributes="0"/>
+                              <Component id="PMSelectTraderOptions" min="-2" pref="137" max="-2" attributes="0"/>
                               <EmptySpace min="-2" pref="213" max="-2" attributes="0"/>
                               <Component id="PMSendOrder" min="-2" max="-2" attributes="0"/>
                               <EmptySpace max="-2" attributes="0"/>
@@ -478,7 +478,7 @@
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Group type="103" alignment="0" groupAlignment="3" attributes="0">
                               <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
-                              <Component id="TraderSelectBrokerOptions" alignment="3" min="-2" max="-2" attributes="0"/>
+                              <Component id="PMSelectTraderOptions" alignment="3" min="-2" max="-2" attributes="0"/>
                           </Group>
                           <Component id="PMSendOrder" min="-2" max="-2" attributes="0"/>
                       </Group>
@@ -492,7 +492,7 @@
             </DimensionLayout>
           </Layout>
           <SubComponents>
-            <Component class="javax.swing.JComboBox" name="TraderSelectBrokerOptions">
+            <Component class="javax.swing.JComboBox" name="PMSelectTraderOptions">
               <Properties>
                 <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
                   <StringArray count="5">
@@ -505,7 +505,7 @@
                 </Property>
               </Properties>
               <Events>
-                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TraderSelectBrokerOptionsActionPerformed"/>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="PMSelectTraderOptionsActionPerformed"/>
               </Events>
               <AuxValues>
                 <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
@@ -525,15 +525,15 @@
               <SubComponents>
                 <Component class="javax.swing.JTable" name="PMSendOrderTable">
                   <Properties>
-                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(3);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(6);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(7);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));">
+                    <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor" postCode="TableColumn col2 = PMSendOrderTable.getColumnModel().getColumn(1);&#xa;col2.setCellEditor(new myComboBoxEditor(StockExchange));&#xa;col2.setCellRenderer(new MyComboBoxRenderer(StockExchange));&#xa;TableColumn col1 = PMSendOrderTable.getColumnModel().getColumn(4);&#xa;col1.setCellEditor(new myComboBoxEditor(ActionItems));&#xa;col1.setCellRenderer(new MyComboBoxRenderer(ActionItems));&#xa;TableColumn col3 = PMSendOrderTable.getColumnModel().getColumn(7);&#xa;col3.setCellEditor(new myComboBoxEditor(AccountType));&#xa;col3.setCellRenderer(new MyComboBoxRenderer(AccountType));">
                       <Table columnCount="8" rowCount="1">
                         <Column editable="true" title="Portfolio ID" type="java.lang.Long"/>
+                        <Column editable="true" title="Stock Exchange" type="java.lang.String"/>
                         <Column editable="true" title="Symbol" type="java.lang.String"/>
                         <Column editable="true" title="Quantity" type="java.lang.Integer"/>
                         <Column editable="true" title="Action" type="java.lang.String"/>
                         <Column editable="true" title="Stop Price" type="java.lang.Double"/>
                         <Column editable="true" title="Limit Price" type="java.lang.Double"/>
-                        <Column editable="true" title="Stock Exchange" type="java.lang.String"/>
                         <Column editable="true" title="Account Type" type="java.lang.String"/>
                       </Table>
                     </Property>
